# webcotator

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt  utils.py
templates/: home.html
