[tool.poetry]
name = "webcotator"
version = "0.1.0"
description = "Webcotator is the upgraded version of the cotator project. The intent is to serve an web version of it."
authors = ["Eduardo <pythobyte>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
Jinja2 = "^2.11.3"
requests = "^2.25.1"
lxml = "^4.6.2"

[tool.poetry.dev-dependencies]
fastapi = "^0.63.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
